# xts-pythonclient-api-sdk

./: .env  .gitignore  MarketDataSocketClient.py  MarketdataSocketExample.py  config.ini  pyproject.toml
